tests/ui/coercion/coerce-block-tail.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-block-tail.rs:4:23
   |
LL |     let _: &i32 = & { Box::new(1i32) };
   |                       ^^^^^^^^^^^^^^ expected `i32`, found `Box<i32>`
   |
   = note: expected type `i32`
            found struct `Box<i32>`
help: consider unboxing the value
   |
LL |     let _: &i32 = & { *Box::new(1i32) };
   |                       +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
